--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
 :root { 
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #444444; /* Default color used for the majority of the text content across the entire website */
-  --heading-color:  #5f687b; /* Color for headings, subheadings and title throughout the website */
+  --heading-color:   #5f687b; /* Color for headings, subheadings and title throughout the website */
   --accent-color:   #4c6689; /*  #10bc69; Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
@@ -80,7 +80,9 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--heading-color);
+
+  color: #13426c;
+  /* color: var(--heading-color); */
   font-family: var(--heading-font);
 }
 
@@ -648,7 +650,8 @@ h6 {
 }
 
 .footer .footer-about a {
-  color: var(--heading-color);
+  color: #13426c;
+  /* color: var(--heading-color); */
   font-size: 24px;
   font-weight: 600;
   font-family: var(--heading-font);
@@ -896,6 +899,8 @@ section,
   transition: 0.5s;
   box-shadow: 0 8px 28px rgba(0, 0, 0, 0.1);
 }
+
+
 
 .hero .btn-get-started:hover {
   color: var(--contrast-color);
